deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: $NAME
    labels:
        app: $NAME
    namespace: $NAMESPACE
spec:
    revisionHistoryLimit: 1
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    replicas: $APP_REPLICAS
    selector:
        matchLabels:
            app: $NAME
    template:
        metadata:
            labels:
                app: $NAME
                version: $APP_VERSION
        spec:
            containers:
                - name: $NAME
                  image: $APP_IMAGE
                  resources:
                      requests:
                          memory: 64Mi
                          cpu: 0.001
                      limits:
                          memory: 128Mi
                          cpu: 1

                  readinessProbe:
                      httpGet:
                          path: /ping
                          port: 3000
                          scheme: HTTP
                      initialDelaySeconds: 0
                      periodSeconds: 1
                      timeoutSeconds: 1
                      successThreshold: 1
                      failureThreshold: 1


                  # volumeMounts:
                  #     - name: token-public-key
                  #       mountPath: /certs/token-public-key.pem
                  #       subPath: token-public-key.pem
                  #       readOnly: true
                  #     - name: token-private-key
                  #       mountPath: /certs/token-private-key.pem
                  #       subPath: token-private-key.pem
                  #       readOnly: true

            # volumes:
            #     - name: token-public-key
            #       configMap:
            #           name: token-public-key
            #     - name: token-private-key
            #       secret:
            #           secretName: token-private-key

            imagePullSecrets:
                - name: regcred
