deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: $APP_NAME
    labels:
        app: $APP_NAME
spec:
    ports:
        - port: $APP_PORT
    selector:
        app: $APP_NAME
