deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: $NAME
    namespace: $NAMESPACE
    labels:
        app: $NAME
spec:
    # tls:
    #   - hosts:
    #       - ${NAME}.default.${KS_REGION}.containers.appdomain.cloud
    #       - ${KS_AKAMAI_DOMAIN}
    #     secretName: ${KS_CLUSTER_SUBDOMAIN}
    rules:
        - http:
              paths:
                  - path: $INGRESS_PATH
                    pathType: Prefix
                    backend:
                        serviceName: $NAME
                        servicePort: $PORT
